fix tags not showing in profile card

--- a/client/styles/components/_buttons.scss
+++ b/client/styles/components/_buttons.scss
@@ -5,7 +5,11 @@
   padding: 5px 15px 5px 15px;
   color: white;
   background-color: $color-orange;
-  text-transform: uppercase; 
+  text-transform: uppercase;
+
+  &:hover {
+    background-color: darken($color-orange, 5%);
+  }
 }
 
 .form-submit-button {
